# softcam

./: .gitignore  run_virtual_cam.sh
docs/: PROJECT_SPECIFICATION.md  README.md
include/: LensModel.h  MediaReader.h  VirtualPTZ.h
scripts/: obfuscate_softcam.ps1
src/baseclasses/: amfilter.cpp  renbase.h  wxlist.cpp
src/engine/: CMakeLists.txt  LensModel.cpp  MediaReader.cpp  VirtualPTZ.cpp  linux_stub.cpp  main.cpp
src/softcamcore/: DShowSoftcam.cpp  Misc.cpp  Misc.h  SenderAPI.cpp
tests/core_tests/: FrameBufferTest.cpp
tests/dll_tests/: raw_api_test.cpp
